--- a/dashboard/stats/aced.html
+++ b/dashboard/stats/aced.html
@@ -1341,7 +1341,7 @@
                             <h5><i class="fa fa-circle mr-5" style="color: #804d00; "></i>Yearly[ACED]</h5>
                           </li>
                         </ul>
-                        <div id="morris-area-chart"></div>
+                        <div id="co_morris-area-chart"></div>
                       </div>
                     </div>
                   </div>
