--- a/dashboard/invoice.html
+++ b/dashboard/invoice.html
@@ -34,7 +34,7 @@
   <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="mobile-only-brand pull-left">
       <div class="nav-header pull-left">
-        <div class="logo-wrap"> <a href="index.html"> <img class="brand-img" src="../favicon.png"  style="width: 32px;margin-bottom: -5px;" alt="brand"/> <span class="brand-text">[ Aced<strong>Coin</strong> ]</span> </a> </div>
+        <div class="logo-wrap"> <a href="https://www.acedcoin.com/dashboard/"> <img class="brand-img" src="../favicon.png"  style="width: 32px;margin-bottom: -5px;" alt="brand"/> <span class="brand-text">[ Aced<strong>Coin</strong> ]</span> </a> </div>
       </div>
       <a id="toggle-btn" class="toggle-left-nav-btn inline-block ml-20 pull-left" href="javascript:void(0);"><i class="mdi mdi-format-list-bulleted"></i></a> <a id="toggle_mobile_search" data-toggle="collapse" data-target="#search_form" class="mobile-only-view" href="javascript:void(0);"><i class="mdi mdi-search"></i></a> <a id="toggle_mobile_nav" class="mobile-only-view" href="javascript:void(0);"><i class="mdi mdi-more"></i></a>
       <form id="search_form" role="search" class="top-nav-search collapse pull-left">
