--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -795,7 +795,7 @@
                     <tbody>
                     <tr>
                       <td><div class="coinaced"></div></td>
-                      <td><a href="/stats/aced.html">AceD (ACED)</a></td>
+                      <td><a href="/dashboard/stats/aced.html">AceD (ACED)</a></td>
                       <td>$0.4398	</td>
                       <td>-6.73 %</td>
                       <td>$13,393	</td>
