--- a/dashboard/stats/aced.html
+++ b/dashboard/stats/aced.html
@@ -1206,7 +1206,7 @@
                 </div>
                 <div class="col-md-12"><img src="../plugins/assets/img/acedbanner.jpg" style="width: 100%;"></div>
                 <!--table-->
-                  <div class="col-xs-12 pa-20">
+                <div class="col-xs-12 pa-20">
                     <div class="panel panel-default card-view">
                       <div class="panel-heading">
                         <div class="pull-left">
@@ -1308,7 +1308,7 @@
                 </div>
                 <!--/table-->
                 <!--moris chart -->
-                <div class="col-xs-12">
+                <div class="col-xs-12 pa-20">
                   <div class="panel panel-default card-view">
                     <div class="panel-heading">
                       <div class="pull-left">
@@ -1388,11 +1388,13 @@
                   </div>
                 </div>
                 <!--/table-->
-                <p>Last price and masternodes count update: 1m 45s ago.</p>
-                <p> Last ACED block 25,812 generated: 2m 2s ago.</p>
-                <p>ROI is calculated based on actual rewards for each block for the last 24 hours.</p>
-                <P>MNO is a masternode coin monitoring and stats service. MNO does not research or recommend any coin. Do your own research and invest at your own risk.</P>
-                <p>ROI changes often and is not the most important factor. Please consider Dev Team - Community - PURPOSE/Platform - Liquidity - Wallet when making masternode purchases.</p>
+                <div class="col-xs-12 pa-20">
+                  <p>Last price and masternodes count update: 1m 45s ago.</p>
+                  <p> Last ACED block 25,812 generated: 2m 2s ago.</p>
+                  <p>ROI is calculated based on actual rewards for each block for the last 24 hours.</p>
+                  <P>MNO is a masternode coin monitoring and stats service. MNO does not research or recommend any coin. Do your own research and invest at your own risk.</P>
+                  <p>ROI changes often and is not the most important factor. Please consider Dev Team - Community - PURPOSE/Platform - Liquidity - Wallet when making masternode purchases.</p>
+                </div>
               </div>
               <div class="tab-pane" id="acedmap">
                 <div class="panel panel-default card-view">
