--- a/dashboard/stats/aced.html
+++ b/dashboard/stats/aced.html
@@ -1204,7 +1204,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-md-12"><img src="../plugins/assets/img/acedbanner.jpg" style="width: 100%;"></div>
+                <div class="col-md-12"><img src="../plugins/assets/img/aced.gif" style="width: 100%;"></div>
                 <!--table-->
                 <div class="col-xs-12 pa-20">
                     <div class="panel panel-default card-view">
