--- a/dashboard/aced-gaming.html
+++ b/dashboard/aced-gaming.html
@@ -3,23 +3,15 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Dashboard-Invoice List</title>
+<title>Dashboard-Aced Gaming</title>
 <meta name="description" content="" />
 <meta name="keywords" content="admin, admin dashboard, admin template" />
 <meta name="author" content="SRGIT"/>
 <!-- Favicon -->
 <link rel="shortcut icon" href="../favicon.png">
 <link rel="icon" href="../favicon.png" type="image/x-icon">
-<!-- Tooltipster css -->
-<link rel="stylesheet" href="plugins/vendors/bower_components/tooltipster/tooltipster.bundle.min.css">
 <!-- Custom CSS -->
 <link href="plugins/assets/css/default.css" rel="stylesheet" type="text/css">
-<!-- Data Table Css -->
-<link rel="stylesheet" type="text/css"
-          href="plugins/vendors/bower_components/datatables.net-bs4/css/dataTables.bootstrap4.min.css">
-<link rel="stylesheet" type="text/css" href="plugins/vendors/bower_components/data-table/css/buttons.dataTables.min.css">
-<link rel="stylesheet" type="text/css"
-          href="plugins/vendors/bower_components/datatables.net-responsive-bs4/css/responsive.bootstrap4.min.css">
 </head>
 <body>
 <!-- Preloader -->
@@ -157,7 +149,7 @@
   <!-- Left Sidebar Menu -->
   <div class="fixed-sidebar-left">
     <ul class="nav navbar-nav side-nav nicescroll-bar">
-      <li><a class="active-page" href="https://www.acedcoin.com/dashboard/" >
+      <li><a  href="https://www.acedcoin.com/dashboard/" >
         <div class="pull-left"><i class="mdi mdi-apps mr-20"></i><span class="right-nav-text">Dashboard</span></div>
         <div class="clearfix"></div>
       </a></li>
@@ -185,7 +177,7 @@
 
       <li><hr class="light-grey-hr mb-10"/></li>
 
-      <li><a href="aced-gaming.html">
+      <li><a class="active-page" href="aced-gaming.html">
         <div class="pull-left"><i class="mdi mdi-youtube-gaming mr-20"></i><span class="right-nav-text">AceD Gaming</span></div>
         <div class="clearfix"></div>
       </a></li>
@@ -407,7 +399,7 @@
                     </a> <a href="javascript:void(0)">
                     <div class="sl-item">
                       <div class="sl-avatar avatar avatar-sm avatar-circle"> <img class="img-responsive img-circle" src="http://via.placeholder.com/128x128" alt="avatar"/> </div>
-                      <div class="sl-content"> <span class="inline-block capitalize-font   pull-left message-per">Mr. Danielle</span> <span class="inline-block font-11  pull-right message-time">21 Feb</span>
+                      <div class="sl-content"> <span class="inline-block capitalize-font   pull-left message-per">Mr. Danielle</span> <span class="inline-block font-11  pull-right message-time">31 Jan</span>
                         <div class="clearfix"></div>
                         <span class=" truncate message-subject">Neque porro quisquam est qui dolorem ipsu messm quia dolor sit amet consectetur nominees</span>
                         <p class="txt-grey truncate">Neque porro quisquam est qui dolorem ipsum quia dolor sit amet consectetur, adipisci velit</p>
@@ -573,150 +565,22 @@
       <!-- Title -->
       <div class="row heading-bg">
         <div class="col-lg-3 col-md-4 col-sm-4 col-xs-12">
-          <h5 class="txt-dark">Invoice Archives</h5>
+          <h5 class="txt-dark">Aced Gaming</h5>
         </div>
         <!-- Breadcrumb -->
         <div class="col-lg-9 col-sm-8 col-md-8 col-xs-12">
           <ol class="breadcrumb">
             <li><a href="index.html">Dashboard</a></li>
             <li><a href="#"><span>Other Pages</span></a></li>
-            <li class="active"><span>Invoice Archives</span></li>
+            <li class="active"><span>Aced-Gaming</span></li>
           </ol>
         </div>
         <!-- /Breadcrumb --> 
       </div>
       <!-- /Title --> 
       <!-- Row -->
-      <div class="row">
-        <div class="col-xs-12">
-          <div class="panel panel-default card-view">
-            <div class="panel-heading">
-              <div class="pull-left">
-                <h6 class="panel-title txt-dark">Invoice List</h6>
-              </div>
-              <div class="pull-right"> <a data-toggle="tooltip" href="invoice-list.html" data-placement="top" title="" data-original-title="List View" class="sorting-type btn-primary txt-light"><i class="fa fa-bars" aria-hidden="true"></i></a> <a data-toggle="tooltip" href="invoice-archive.html" data-placement="top" title="" data-original-title="Grid View" class="sorting-type btn-primary txt-light"><i class="fa fa-th" aria-hidden="true"></i></a> </div>
-              <div class="clearfix"></div>
-            </div>
-            <div class="panel-wrapper collapse in">
-              <div class="panel-body">
-                <div class="clearfix"></div>
-                <div class="datatable-responsive table-responsive">
-                  <table id="table-style-hover" class="table table-striped table-hover table-bordered nowrap">
-                    <thead>
-                      <tr>
-                        <th>ID</th>
-                        <th>Name</th>
-                        <th>Country</th>
-                        <th>Amount</th>
-                        <th>Transaction date</th>
-                        <th>Status</th>
-                        <th>Payment mode</th>
-                        <th><i class="fa fa-file-text" aria-hidden="true"></i></th>
-                      </tr>
-                    </thead>
-                    <tbody>
-                      <tr>
-                        <td>#1234</td>
-                        <td>Willey Wonga</td>
-                        <td>Derbey</td>
-                        <td>$520</td>
-                        <td>2018/01/20</td>
-                        <td><span class="label-danger btn-mini">Cancelled</span></td>
-                        <td><i class="fa fa fa-cc-paypal mr-5" aria-hidden="true"></i> Paypal</td>
-                        <td><a href="invoice.html" class="btn text-uppercase btn-med btn-primary" target="_blank">View Invoice</a></td>
-                      </tr>
-                      <tr>
-                        <td>#2345</td>
-                        <td>Riley Pepper</td>
-                        <td>Amsterdam</td>
-                        <td>$2345</td>
-                        <td>2018/02/20</td>
-                        <td><span class="label-success btn-mini">Completed</span></td>
-                        <td><i class="fa fa-money mr-5" aria-hidden="true"></i> Cash on Delivery</td>
-                        <td><a href="invoice.html" class="btn text-uppercase btn-med btn-primary" target="_blank">View Invoice</a></td>
-                      </tr>
-                      <tr>
-                        <td>#3456</td>
-                        <td>Ashley ames</td>
-                        <td>Scotland</td>
-                        <td>$320</td>
-                        <td>2018/03/12</td>
-                        <td><span class="label-warning btn-mini">Pending</span></td>
-                        <td><i class="fa fa-google-wallet mr-5" aria-hidden="true"></i> Google Payment</td>
-                        <td><a href="invoice.html" class="btn text-uppercase btn-med btn-primary" target="_blank">View Invoice</a></td>
-                      </tr>
-                      <tr>
-                        <td>#4567</td>
-                        <td>Mason Hudson</td>
-                        <td>India</td>
-                        <td>$1234</td>
-                        <td>2018/02/25</td>
-                        <td><span class="label-success btn-mini">Completed</span></td>
-                        <td><i class="fa fa-credit-card mr-5" aria-hidden="true"></i> Debit Card</td>
-                        <td><a href="invoice.html" class="btn text-uppercase btn-med btn-primary" target="_blank">View Invoice</a></td>
-                      </tr>
-                      <tr>
-                        <td>#1234</td>
-                        <td>Dominic Wong</td>
-                        <td>Derbey</td>
-                        <td>$520</td>
-                        <td>2018/01/20</td>
-                        <td><span class="label-warning btn-mini">Pending</span></td>
-                        <td><i class="fa fa fa-cc-paypal mr-5" aria-hidden="true"></i> Paypal</td>
-                        <td><a href="invoice.html" class="btn text-uppercase btn-med btn-primary" target="_blank">View Invoice</a></td>
-                      </tr>
-                      <tr>
-                        <td>#4567</td>
-                        <td>Mia Hathaway</td>
-                        <td>India</td>
-                        <td>$1234</td>
-                        <td>2018/02/25</td>
-                        <td><span class="label-danger btn-mini">Cancelled</span></td>
-                        <td><i class="fa fa-credit-card mr-5" aria-hidden="true"></i> Debit Card</td>
-                        <td><a href="invoice.html" class="btn text-uppercase btn-med btn-primary" target="_blank">View Invoice</a></td>
-                      </tr>
-                      <tr>
-                        <td>#3456</td>
-                        <td>Rihanna scott</td>
-                        <td>Scotland</td>
-                        <td>$320</td>
-                        <td>2018/03/12</td>
-                        <td><span class="label-success btn-mini">Completed</span></td>
-                        <td><i class="fa fa-google-wallet mr-5" aria-hidden="true"></i> Google Payment</td>
-                        <td><a href="invoice.html" class="btn text-uppercase btn-med btn-primary" target="_blank">View Invoice</a></td>
-                      </tr>
-                      <tr>
-                        <td>#2345</td>
-                        <td>Wu chin</td>
-                        <td>Amsterdam</td>
-                        <td>$2345</td>
-                        <td>2018/02/20</td>
-                        <td><span class="label-success btn-mini">Completed</span></td>
-                        <td><i class="fa fa-money mr-5" aria-hidden="true"></i> Cash on Delivery</td>
-                        <td><a href="invoice.html" class="btn text-uppercase btn-med btn-primary" target="_blank">View Invoice</a></td>
-                      </tr>
-                    </tbody>
-                    <tfoot>
-                      <tr>
-                        <th>ID</th>
-                        <th>Name</th>
-                        <th>Country</th>
-                        <th>Amount</th>
-                        <th>Transaction date</th>
-                        <th>Status</th>
-                        <th>Payment mode</th>
-                        <th><i class="fa fa-file-text" aria-hidden="true"></i></th>
-                      </tr>
-                    </tfoot>
-                  </table>
-                </div>
-                <div class="clearfix"></div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <!-- /row --> 
+
+      <!-- Row --> 
     </div>
     <!-- Footer -->
     <footer class="footer container-fluid pt-10 pb-10  pl-30 pr-30">
@@ -745,25 +609,9 @@
 <script src="plugins/assets/js/dropdown-bootstrap-extended.js"></script> 
 <!-- Switchery JavaScript --> 
 <script src="plugins/vendors/bower_components/switchery/dist/switchery.min.js"></script> 
-<!-- Print-invoice JavaScript --> 
-<script src="plugins/assets/js/jquery.PrintArea.js"></script> 
-<script src="plugins/assets/js/print.js"></script> 
-<!-- data-table js --> 
-<script src="plugins/vendors/bower_components/datatables.net/js/jquery.dataTables.min.js"></script> 
-<script src="plugins/vendors/bower_components/datatables.net-buttons/js/dataTables.buttons.min.js"></script> 
-<script src="plugins/vendors/bower_components/data-table/js/jszip.min.js"></script> 
-<script src="plugins/vendors/bower_components/data-table/js/pdfmake.min.js"></script> 
-<script src="plugins/vendors/bower_components/data-table/js/vfs_fonts.js"></script> 
-<script src="plugins/vendors/bower_components/datatables.net-buttons/js/buttons.print.min.js"></script> 
-<script src="plugins/vendors/bower_components/datatables.net-buttons/js/buttons.html5.min.js"></script> 
-<script src="plugins/vendors/bower_components/datatables.net-bs4/js/dataTables.bootstrap4.min.js"></script> 
-<script src="plugins/vendors/bower_components/datatables.net-responsive/js/dataTables.responsive.min.js"></script> 
-<script src="plugins/vendors/bower_components/datatables.net-responsive-bs4/js/responsive.bootstrap4.min.js"></script> 
-<script src="plugins/vendors/bower_components/data-table/js/data-table-custom.js"></script> 
-<!-- Tooltipster js --> 
-<script src="plugins/vendors/bower_components/tooltipster/tooltipster.bundle.min.js"></script> 
-<script src="plugins/assets/js/jquery.tooltipster.js"></script> 
 <!-- Init JavaScript --> 
-<script src="plugins/assets/js/init.js"></script>
+<script src="plugins/assets/js/init.js"></script> 
+<!-- Toggle JavaScript --> 
+<script src="plugins/assets/js/toggle.js"></script>
 </body>
 </html>
