--- a/dashboard/ecommerce-products-details.html
+++ b/dashboard/ecommerce-products-details.html
@@ -8,8 +8,8 @@
 <meta name="keywords" content="admin, admin dashboard, admin template" />
 <meta name="author" content="SRGIT"/>
 <!-- Favicon -->
-<link rel="shortcut icon" href="plugins/assets/img/favicon/favicon.png">
-<link rel="icon" href="plugins/assets/img/favicon/favicon.png" type="image/x-icon">
+<link rel="shortcut icon" href="../favicon.png">
+<link rel="icon" href="../favicon.png" type="image/x-icon">
 <!-- Custom CSS -->
 <link href="plugins/assets/css/default.css" rel="stylesheet" type="text/css">
 <!-- Data Table Css -->
